src/test/deca/syntax/invalid/created/class/field_missing_dot.deca
// Description :
//    acces champ avec le point manquant (un espace à la place)
//
// Resultats :
//		Syntaxe error

{
int a = a b;
}